# django-sample

./: .gitignore  Makefile  pyproject.toml  readme.md
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20211026_0813.py  0003_alter_comment_value.py
notebooks/: notebook.ipynb
project/: settings.py  urls.py
