[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Matheus Freire Rabelo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
